Added some Basis-specific logic to the XML serialization. We now turn SubTree nodes into SubTreeWrapper nodes, since we explicitly want the sub-trees to use the same BB as the main tree. We also skip writing the model info to the BT files, except for the sub-tree model info which seems to be needed by Groot.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ endif()
 
 project(groot)
 
+# Added for Basis.
+ADD_DEFINITIONS(-DGROOT_BASIS_XML_OUTPUT)
+
 find_package(Qt5 COMPONENTS  Core Widgets Gui OpenGL Xml Svg)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}  "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
